service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-docker-registry
  namespace: docker-registry
spec:
  type: ClusterIP
  ports:
    - name: http-5000
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: docker-registry
    release: registry
  sessionAffinity: None
  internalTrafficPolicy: Cluster
